tests/paczka1/fuzzy1/19403808.err
Error in line 2: nEEI A619 10,8
Error in line 3: nEEI S905 30,5
Error in line 13: nEEI A619 44,4
Error in line 20: nEEI S705 -1,4
Error in line 17: YkTtD S905 31,7
Error in line 19: S705 A348 67,1
Error in line 21: ghv3cNj A619 3,4
Error in line 35: 4vrT A619 90,5
